[package]
name = "n32903_rs"
version = "0.1.0"
edition = "2021"
description = "N32903 (W55FA93) Rust BSP - Core peripheral HAL library"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]

[profile.dev]
panic = "abort"
opt-level = "s"
debug = true
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
debug = false
lto = true
codegen-units = 1
